hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_isUserDefined_error.php
<?php
$r1 = new ReflectionClass("stdClass");
var_dump($r1->isUserDefined('X'));
var_dump($r1->isUserDefined('X', true));
?>
